Finished the navigation bar

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,22 +7,65 @@ header {
   background-color: #2c9ab7;
   color: white;
   height: 200px;
+  padding-top: 50px;
+}
+
+main {
+  height: 750px;
+}
+
+header, nav, main, footer {
+  padding-left: 200px;
+  padding-right: 200px;
 }
 
 h1 {
   margin: 0;
+  font-size: 3rem;
+}
+
+h2 {
+  margin-top: 15px;
+  font-style: italic;
+  font-weight: normal;
 }
 
 h1, h3 {
   text-transform: uppercase;
 }
 
+nav {
+  background-color: #ebebeb;
+  /* height: 70px; */
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+nav li, nav a {
+  color: black;
+}
+
+nav li {
+  display: inline-block;
+  padding-right: 5px;
+}
+
+nav a {
+  font-weight: bold;
+}
+
+nav a:hover {
+  color: #2c9ab7;
+}
+
 article {
   float: left;
+  width: 60%;
 }
 
 aside {
   float: right;
+  width: 40%;
 }
 
 h3 {
@@ -31,5 +74,14 @@ h3 {
 }
 
 a {
-  color: lightblue;
+  color: #2c9ab7;
+  text-decoration: none;
+}
+
+footer {
+  height:300px;
+  padding-top:50px;
+  background-color: #393939;
+  color: white;
+  text-align: center;
 }
