--- a/styles/style.css
+++ b/styles/style.css
@@ -3,31 +3,37 @@ body {
   margin: 0;
 }
 
-header {
-  background-color: #2c9ab7;
-  color: white;
-  height: 200px;
-  padding-top: 50px;
-}
-
-main {
-  height: 750px;
-}
-
 header, nav, main, footer {
   padding-left: 200px;
   padding-right: 200px;
 }
 
+header {
+  background-color: #2c9ab7;
+  color: white;
+  height: 160px;
+  padding-top: 80px;
+  padding-bottom: 70px;
+}
+
+main {
+  height: 750px;
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
+
 h1 {
   margin: 0;
-  font-size: 3rem;
+  font-size: 4rem;
+  /* width: 600px; */
 }
 
 h2 {
   margin-top: 15px;
+  font-size: 2rem;
   font-style: italic;
   font-weight: normal;
+  width: 450px;
 }
 
 h1, h3 {
@@ -39,6 +45,7 @@ nav {
   /* height: 70px; */
   padding-top: 30px;
   padding-bottom: 30px;
+  font-size: 19px;
 }
 
 nav li, nav a {
@@ -60,12 +67,22 @@ nav a:hover {
 
 article {
   float: left;
-  width: 60%;
+  width: 65%;
+}
+
+/* article section {
+  padding-right: 20px;
+} */
+
+h4 {
+  color: #2c9ab7;
+  font-size: 20px;
+  line-height: 1.6;
 }
 
 aside {
   float: right;
-  width: 40%;
+  width: 30%;
 }
 
 h3 {
