--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ header {
 }
 
 main {
-  height: 750px;
+  height: 780px;
   margin-top: 40px;
   margin-bottom: 10px;
 }
@@ -44,7 +44,7 @@ nav {
   background-color: #ebebeb;
   /* height: 70px; */
   padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
   font-size: 19px;
 }
 
@@ -61,23 +61,34 @@ nav a {
   font-weight: bold;
 }
 
-nav a:hover {
+nav a:hover, h4, a {
   color: #2c9ab7;
 }
 
 article {
   float: left;
-  width: 65%;
+  width: 61%;
 }
 
 /* article section {
   padding-right: 20px;
 } */
 
-h4 {
-  color: #2c9ab7;
-  font-size: 20px;
+h3, h4, p {
   line-height: 1.6;
+}
+
+h4 {
+  /* color: #2c9ab7; */
+  font-size: 20px;
+}
+
+.quote {
+  /* color: #85cde0; */
+  color: #71B9CC;
+  font-size: 24px;
+  margin: 60px 0 60px 0;
+  /* margin-bottom: 60px; */
 }
 
 aside {
@@ -85,18 +96,27 @@ aside {
   width: 30%;
 }
 
+figure {
+  margin: 1rem 0 1rem 0;
+}
+
+figcaption {
+  margin: 1rem 0 1rem 0;
+}
+
 h3 {
-  font-size: 2rem;
+  font-size: 1.4rem;
   font-family: sans-serif;
+  margin-bottom: 0;
 }
 
 a {
-  color: #2c9ab7;
+  /* color: #2c9ab7; */
   text-decoration: none;
 }
 
 footer {
-  height:300px;
+  height: 300px;
   padding-top:50px;
   background-color: #393939;
   color: white;
