--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,6 @@ main {
 h1 {
   margin: 0;
   font-size: 4rem;
-  /* width: 600px; */
 }
 
 h2 {
@@ -42,7 +41,6 @@ h1, h3 {
 
 nav {
   background-color: #ebebeb;
-  /* height: 70px; */
   padding-top: 30px;
   padding-bottom: 20px;
   font-size: 19px;
@@ -65,30 +63,27 @@ nav a:hover, h4, a {
   color: #2c9ab7;
 }
 
-article {
+.article {
   float: left;
   width: 61%;
 }
 
-/* article section {
-  padding-right: 20px;
-} */
+.about img {
+  width: 100%;
+}
 
 h3, h4, p {
   line-height: 1.6;
 }
 
 h4 {
-  /* color: #2c9ab7; */
   font-size: 20px;
 }
 
 .quote {
-  /* color: #85cde0; */
   color: #71B9CC;
   font-size: 24px;
   margin: 60px 0 60px 0;
-  /* margin-bottom: 60px; */
 }
 
 aside {
@@ -111,14 +106,37 @@ h3 {
 }
 
 a {
-  /* color: #2c9ab7; */
   text-decoration: none;
 }
 
+aside section a {
+  margin: 10px;
+}
+
 footer {
-  height: 300px;
+  height: 375px;
   padding-top:50px;
   background-color: #393939;
   color: white;
   text-align: center;
+}
+
+footer img {
+  padding: 20px;
+}
+
+footer section {
+  width: 500px;
+  margin: auto auto;
+}
+
+footer nav {
+  background-color: inherit;
+  font-size: 15px;
+  padding: inherit;
+  margin: 35px 0 35px 0;
+}
+
+footer li, footer a {
+  color: white;
 }
