--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -11,13 +11,12 @@ header, nav, main, footer {
 header {
   background-color: #2c9ab7;
   color: white;
-  height: 160px;
-  padding-top: 80px;
-  padding-bottom: 70px;
+  padding-top: 40px;
+  padding-bottom: 50px;
 }
 
 main {
-  height: 820px;
+  /* height: 820px; */
   margin-top: 35px;
   margin-bottom: 10px;
 }
@@ -43,14 +42,14 @@ nav {
   background-color: #ebebeb;
   padding-top: 30px;
   padding-bottom: 20px;
-  font-size: 19px;
+  font-size: 1.2rem;
 }
 
-nav li, nav a {
+nav span, nav a {
   color: black;
 }
 
-nav li {
+nav span {
   display: inline-block;
   padding-right: 5px;
 }
@@ -60,7 +59,8 @@ nav a {
 }
 
 nav a:hover, h4, a {
-  color: #2c9ab7;
+  /* color: #2c9ab7; */
+  color: #247C94;
 }
 
 .article {
@@ -77,12 +77,15 @@ h3, h4, p {
 }
 
 h4 {
-  font-size: 20px;
+  /* font-size: 20px; */
+  font-size: 1.2rem;
 }
 
 .quote {
-  color: #71B9CC;
-  font-size: 24px;
+  /* color: #71B9CC; */
+  color: #1B5D6F;
+  /* font-size: 24px; */
+  font-size: 1.4rem;
   margin: 60px 0 60px 0;
 }
 
@@ -118,8 +121,10 @@ a {
 }
 
 footer {
-  height: 375px;
-  padding-top: 50px;
+  /* height: 375px; */
+  clear: both;
+  padding-top: 20px;
+  padding-bottom: 20px;
   background-color: #393939;
   color: white;
   text-align: center;
@@ -130,17 +135,18 @@ footer img {
 }
 
 footer section {
-  width: 500px;
+  /* width: 500px; */
+  width: 57%;
   margin: auto auto;
 }
 
 footer nav {
   background-color: inherit;
-  font-size: 15px;
+  font-size: 1rem;
   padding: inherit;
   margin: 35px 0 35px 0;
 }
 
-footer li, footer a {
+footer span, footer a {
   color: white;
 }
